k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: safeplatform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: safeplatform
  template:
    metadata:
      labels:
        app: safeplatform
        version: vdeployment-version
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: safeplatform
          image: docker-server/docker-org/safeplatform:image-version
          ports:
            - containerPort: 8090
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
      imagePullSecrets:
        - name: hwbj
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: safeplatform
  annotations:
    kubernetes.io/elb.class: union
    kubernetes.io/elb.autocreate: '{"type":"public","bandwidth_name":"cce-bandwidth-1551163379627","bandwidth_chargemode":"traffic","bandwidth_size":5,"bandwidth_sharetype":"PER","eip_type":"5_bgp","name":"james"}'
    kubernetes.io/elb.enterpriseID: '0'     # 负载均衡所属企业项目ID
    kubernetes.io/elb.lb-algorithm: ROUND_ROBIN                   # 负载均衡器算法
    kubernetes.io/elb.session-affinity-mode: SOURCE_IP          # 会话保持类型为源IP
    kubernetes.io/elb.session-affinity-option: '{"persistence_timeout": "30"}'     # 会话保持时间（分钟）
    kubernetes.io/elb.health-check-flag: 'on'                   # 开启ELB健康检查功能
    kubernetes.io/elb.health-check-option: '{"protocol":"TCP","delay":"5","timeout":"10","max_retries":"3"}'
spec:
  selector:
    app: safeplatform
  ports:
    - name: tcp-cce-service-0
      protocol: TCP
      port: 31001
      targetPort: 8090
  type: LoadBalancer
