asm_route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app: safeplatform
    port: '31001'
  managedFields:
    - apiVersion: networking.istio.io/v1alpha3
  name: safeplatform-31001
  namespace: test
spec:
  hosts:
    - safeplatform
  tcp:
    - match:
        - gateways:
            - mesh
          port: 31001
      route:
        - destination:
            host: safeplatform.test.svc.cluster.local
            port:
              number: 31001
            subset: v71
          weight: 50
        - destination:
            host: safeplatform.test.svc.cluster.local
            port:
              number: 31001
            subset: vgrey28
          weight: 50
